--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ copyright: Copyright &copy; 2022 Opal Health Informatics Group (O-HIG)
 # Content
 nav:
   - Home: index.md
+  - Software Versions: software_versions.md
   - Architecture: architecture.md
   - Best Practices: best_practices.md
   - Strangler Fig: strangler_fig.md
