--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,20 @@
 # Publish docs to GitLab Pages
 # see: https://squidfunk.github.io/mkdocs-material/publishing-your-site/#gitlab-pages
 #
-image: python:3.10.2-slim-bullseye
-
-before_script:
-  # install dependencies for mkdocs-git-revision-date-plugin
-  - apt update && apt-get install -y git
-  - pip install --upgrade pip
-  - pip install -r requirements.txt
+image:
+  name: squidfunk/mkdocs-material:8.2.8
+  entrypoint: [""]
 
 build:
   stage: build
-  rules:
-    # run for merge requests and on default branch
-    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
   script:
-    - mkdocs build --site-dir site
+    - pip install -r requirements.txt
+    - mkdocs --version
+    - mkdocs build --site-dir public
   artifacts:
     expire_in: 7 days
     paths:
-      - site
+      - public
 
 pages:
   stage: deploy
@@ -27,7 +22,7 @@ pages:
     # deploy only on default branch
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   script:
-    - mkdocs build --site-dir public
+    - mkdocs --version
   artifacts:
     paths:
       - public
