chore: Add mariadb to rules for separate minor and patch releases

--- a/renovate.json5
+++ b/renovate.json5
@@ -13,7 +13,7 @@
     },
     // Allow to receive patch updates for certain packages while waiting with upgrading to the next minor version
     {
-      "matchPackagePatterns": ["python", "php", "node"],
+      "matchPackagePatterns": ["python", "php", "node", "mariadb"],
       "separateMinorPatch": true
     },
   ]
