chore: Group dependencies from versions Dockerfile

--- a/renovate.json5
+++ b/renovate.json5
@@ -18,7 +18,11 @@
     // Allow to receive patch updates for certain packages while waiting with upgrading to the next minor version
     {
       "matchPackagePatterns": ["python", "php", "node", "mariadb"],
-      "separateMinorPatch": true
+      "matchFiles": ["versions.Dockerfile"],
+      "groupName": "software packages",
+      "semanticCommitType": "chore",
+      "semanticCommitScope": "",
+      "separateMinorPatch": true,
     },
   ]
 }
