chore: Relax timing of weekly mkdocs-material updates

--- a/renovate.json5
+++ b/renovate.json5
@@ -12,7 +12,7 @@
       "groupName": "mkdocs-material",
       // Restrict to weekly updates
       "schedule": [
-        "before 9am on Monday",
+        "before 12pm on Monday",
       ],
     },
     // Allow to receive patch updates for certain packages while waiting with upgrading to the next minor version
