--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ build:
   script:
     - pip install -r requirements.txt
     - mkdocs --version
-    - mkdocs build --site-dir public
+    - mkdocs build --strict --site-dir public
   artifacts:
     expire_in: 7 days
     paths:
