--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,8 @@ nav:
   - Testing Guides:
       - Registration: testing/registration.md
       - App: testing/app.md
+  - Training:
+      - Sequence Diagrams: training/sequence_diagrams.md
   - Changelog: changelog.md
   - Extra:
       - Playground: playground.md
@@ -82,6 +84,10 @@ markdown_extensions:
   - admonition
   - def_list
   - footnotes
+  # enable HTML in Markdown for image captions
+  # https://squidfunk.github.io/mkdocs-material/reference/images/#image-captions
+  # https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown/#markdown-in-html
+  - md_in_html
   - tables
   - toc:
       permalink: true
