chore: enable Renovate updates for pre-commit

--- a/renovate.json5
+++ b/renovate.json5
@@ -42,4 +42,9 @@
       ],
     },
   ],
+  // enable updates for pre-commit
+  // see: https://docs.renovatebot.com/modules/manager/pre-commit/
+  "pre-commit": {
+    "enabled": true
+  }
 }
