chore: add mkdocs html proofer plugin to proof links and anchors
See merge request opalmedapps/docs!180

Merged-by: Matthias Schoettle <3097098-mschoettle@users.noreply.gitlab.com>
Approved-by: Kelly Agnew <kelly.agnew@mail.mcgill.ca>
Co-authored-by: Matthias Schoettle <git@mattsch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,18 @@ plugins:
   # keep assets private
   # https://squidfunk.github.io/mkdocs-material/plugins/privacy/
   - privacy
+  # https://github.com/manuzhang/mkdocs-htmlproofer-plugin#configuring
+  - htmlproofer:
+      raise_error: True
+      skip_downloads: True
+      ignore_urls:
+        # non-public URLs
+        - https://opalmedapps.gitlab.io/*
+        - https://gitlab.com/opalmedapps/*
+        # PlantUML diagrams are included as data
+        - "data:*"
+      # only enable when building in CI to speed up local builds
+      enabled: !ENV [CI, false]
 
 # Extensions
 markdown_extensions:
@@ -146,6 +158,14 @@ markdown_extensions:
       server: http://www.plantuml.com/plantuml
       # use caching to speed up live-reloading
       cachedir: .plantuml/
+
+
+# https://www.mkdocs.org/user-guide/configuration/#validation
+validation:
+  omitted_files: warn
+  absolute_links: warn
+  unrecognized_links: warn
+  anchors: warn
 
 
 watch:
