chore: add code spell checker to recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "editorconfig.editorconfig",
     "redhat.vscode-yaml",
     "eamodio.gitlens",
-    "davidanson.vscode-markdownlint"
+    "davidanson.vscode-markdownlint",
+    "streetsidesoftware.code-spell-checker"
   ]
 }
