feat: add instructions to set up a local development environment
See merge request opalmedapps/docs#181

Merged-by: Matthias Schoettle <git@mattsch.com>
Approved-by: Stacey Beard <stacey.beard@muhc.mcgill.ca>
Co-authored-by: Matthias Schoettle <git@mattsch.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
       - development/architecture/index.md
       - development/architecture/migration.md
       - Registration Process: development/architecture/registration.md
+    - development/setup.md
     - Best Practices:
       - Overview: development/best_practices/best_practices.md
       - Code Review: development/best_practices/code_review.md
