--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ nav:
       - Generate Self Signed Certificates: development/guides/self_signed_certificates.md
   - Deploy:
     - Deploying The Opal Solution: deploy/index.md
-    - Hospital Integration: integration/index.md
+    - Hospital Integration: deploy/integration.md
   - Changelog: changelog.md
 
 # Configuration
