--- a/docs/deploy/diagrams/openapi_hospital.yml
+++ b/docs/deploy/diagrams/openapi_hospital.yml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Hospital Source Data System API
   description: "APIs to fetch and receieve basic patient information. These API facilitates various
-   opal functionality. At a minimum, the patient demographics lookup must be supported in order for opal
+   Opal functionality. At a minimum, the patient demographics lookup must be supported in order for Opal
    to successfully complete a patient registration."
   version: 1.0.0
 
@@ -10,16 +10,16 @@ tags:
   - name: demographics
     description: Endpoints for accessing patient demographic information
   - name: historical data
-    description: Endpoints for providing historical patient data for newly registered opal patients
+    description: Endpoints for providing historical patient data for newly registered Opal patients
   - name: wait room
     description: Endpoints for updating a hospital with waiting room management information about a patient
 
 paths:
-  /getPatientDemographics:
+  /getPatientDemographicsByMRN:
     post:
       tags:
         - demographics
-      summary: Retrieve patient demographic information
+      summary: Retrieve patient demographic information by patient MRN
       description: "Fetch basic demographic details of a patient identified by MRN and site."
       requestBody:
         required: true
@@ -69,16 +69,9 @@ paths:
                     type: string
                     format: datetime
                     description: "Patient death date and time"
-                  primary_language:
+                  health_insurance_number:
                     type: string
-                    description: "Patient's primary language"
-                  ramq:
-                    type: string
-                    description: "Patient's RAMQ number (if applicable)"
-                  ramq_expiration:
-                    type: string
-                    format: date
-                    description: "Patient's RAMQ expiration date"
+                    description: "Patient's health insurance number (if applicable)"
                   mrns:
                     type: array
                     description: "List of MRN and site combinations associated with the patient"
@@ -94,7 +87,7 @@ paths:
                   - last_name
                   - sex
                   - date_of_birth
-                  - ramq
+                  - health_insurance_number
                   - mrns
                   - deceased
                   - death_date_time
@@ -107,10 +100,122 @@ paths:
                 properties:
                   status:
                     type: string
-                    example: "error"
-                  reason:
+                    example: "400"
+                  message:
                     type: string
                     example: "Invalid MRN or site provided."
+        '404':
+          description: The patient was not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "404"
+                  message:
+                    type: string
+                    example: "The patient could not be found."
+
+  /getPatientDemographicsByHIN:
+    post:
+      tags:
+        - demographics
+      summary: Retrieve patient demographic information by patient health insurance number
+      description: "Fetch basic demographic details of a patient identified by the health insurance number."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                health_insurance_number:
+                  description: "Patient's health insurance number"
+                  type: string
+              required:
+                - health_insurance_number
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  first_name:
+                    type: string
+                    description: "Patient's first name"
+                  last_name:
+                    type: string
+                    description: "Patient's last name"
+                  alias:
+                    type: string
+                    description: "Patient alias"
+                  sex:
+                    type: string
+                    description: "Patient's gender"
+                  date_of_birth:
+                    type: string
+                    format: date
+                    description: "Patient's date of birth"
+                  deceased:
+                    type: string
+                    format: boolean
+                    description: "True if the patient is deceased, False otherwise"
+                  death_date_time:
+                    type: string
+                    format: datetime
+                    description: "Patient death date and time"
+                  health_insurance_number:
+                    type: string
+                    description: "Patient's health insurance number (if applicable)"
+                  mrns:
+                    type: array
+                    description: "List of MRN and site combinations associated with the patient"
+                    items:
+                      type: object
+                      properties:
+                        mrn:
+                          type: string
+                        site:
+                          type: string
+                required:
+                  - first_name
+                  - last_name
+                  - sex
+                  - date_of_birth
+                  - health_insurance_number
+                  - mrns
+                  - deceased
+                  - death_date_time
+        '400':
+          description: Invalid Parameters
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "400"
+                  message:
+                    type: string
+                    example: "Invalid data provided."
+        '404':
+          description: The patient was not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "404"
+                  message:
+                    type: string
+                    example: "The patient could not be found."
 
   /updatePatientLocation:
     post:
@@ -146,10 +251,23 @@ paths:
                 properties:
                   status:
                     type: string
-                    example: "error"
-                  reason:
+                    example: "400"
+                  message:
                     type: string
                     example: "Invalid appointmentId or location provided."
+        '404':
+          description: The appointment could not be found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "404"
+                  message:
+                    type: string
+                    example: "The patient could not be found."
 
   /uploadPatientMeasurementDocument:
     post:
@@ -160,172 +278,31 @@ paths:
       requestBody:
         required: true
         content:
-          application/xml:
-            schema:
-              type: string
-              example: |
-                <soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:scan="http://scanning.hospital.ca/">
-                  <soapenv:Header/>
-                  <soapenv:Body>
-                    <scan:SendDocumentToScanning>
-                      <Document>VERY_LONG_REPORT_PDF_ENCODED_STRING</Document>
-                      <MRN>1111111</MRN>
-                      <Facility>XXX</Facility>
-                      <Visit/>
-                      <DocType>MU-4183</DocType>
-                      <DocClassification>0000</DocClassification>
-                      <DocDate>2024/07/08 11:25:10</DocDate>
-                      <IndexingAction>R</IndexingAction>
-                      <ExternalSystem>ORMS</ExternalSystem>
-                      <ExternalId>XXXX-RV-5989470-^ORMS</ExternalId>
-                      <Comments></Comments>
-                      <OwnerName></OwnerName>
-                    </scan:SendDocumentToScanning>
-                  </soapenv:Body>
-                </soapenv:Envelope>
-      responses:
-        '200':
-          description: Document uploaded successfully
-        '400':
-          description: Invalid XML or Parameters
-          content:
-            application/xml:
-              schema:
-                type: string
-                example: |
-                  <soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/">
-                    <soapenv:Body>
-                      <Fault>
-                        <faultcode>Client</faultcode>
-                        <faultstring>Invalid MRN or Facility provided.</faultstring>
-                      </Fault>
-                    </soapenv:Body>
-                  </soapenv:Envelope>
-
-  /getPatientHistoricalLabs:
-    post:
-      tags:
-        - historical data
-      summary: Retrieve historical lab data for a specific patient and date range
-      description: "Fetch historical lab results for a patient identified by hospitalPatientId within a specified date range."
-      requestBody:
-        required: true
-        content:
           application/json:
             schema:
               type: object
               properties:
-                hospitalPatientId:
-                  description: "Unique identifier for the patient in the hospital system"
+                mrn:
                   type: string
-                fromDate:
-                  description: "Start date for the lab data retrieval in YYYY-MM-DD format"
+                  example: "1111111"
+                site:
                   type: string
-                  format: date
-                toDate:
-                  description: "End date for the lab data retrieval in YYYY-MM-DD format"
+                  example: "XXX"
+                reportContent:
                   type: string
-                  format: date
-              required:
-                - hospitalPatientId
-                - fromDate
-                - toDate
+                  example: "VERY_LONG_REPORT_PDF_ENCODED_STRING"
+                docNumber:
+                  type: string
+                  example: "MU-4183"
+                documentDate:
+                  type: string
+                  format: date-time
+                  example: "2024-07-08T11:25:10Z"
       responses:
         '200':
-          description: Historical lab data retrieved successfully
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    mrn:
-                      type: string
-                      description: "Patient's MRN"
-                    site:
-                      type: string
-                      description: "Site where the lab test was conducted"
-                    testCode:
-                      type: string
-                      description: "HL7v2 identifier code for the lab test"
-                    testGroupCode:
-                      type: string
-                      description: "HL7v2 identifier code for the test group"
-                    testDate:
-                      type: string
-                      format: date
-                      description: "Date the test was conducted"
-                    testValue:
-                      type: string
-                      description: "Result value of the lab test"
-                    testValueNumeric:
-                      type: number
-                      description: "Numeric value of the test result"
-                    resultDate:
-                      type: string
-                      format: date-time
-                      description: "Date the result was recorded in the lab system"
-                    unitDescription:
-                      type: string
-                      description: "Units of the test result"
-                    normalRange:
-                      type: string
-                      description: "Normal range description for the test result"
-                    minNorm:
-                      type: number
-                      description: "Minimum normal value"
-                    maxNorm:
-                      type: number
-                      description: "Maximum normal value"
-                    abnormalFlag:
-                      type: string
-                      description: "Flag indicating if the result is abnormal"
-                    sequenceNum:
-                      type: integer
-                      description: "Sequence number of the test result"
-                    dateAdded:
-                      type: string
-                      format: date-time
-                      description: "Date the test result was added to the system"
-                    availableAt:
-                      type: string
-                      description: "Location or system where the result is available"
-              example:
-                - mrn: "1111111"
-                  site: "AAA"
-                  testCode: "TC001"
-                  testGroupCode: "TG001"
-                  testDate: "2024-01-15"
-                  testValue: "Positive"
-                  testValueNumeric: 1.5
-                  resultDate: "2024-01-15T14:30:00Z"
-                  unitDescription: "mg/dL"
-                  normalRange: "0.5-1.5"
-                  minNorm: 0.5
-                  maxNorm: 1.5
-                  abnormalFlag: "N"
-                  sequenceNum: 1
-                  dateAdded: "2024-01-15T15:00:00Z"
-                  availableAt: "2024-02-20T10:45:00Z"
-                - mrn: "2222222"
-                  site: "BBB"
-                  testCode: "TC002"
-                  testGroupCode: "TG002"
-                  testDate: "2024-02-20"
-                  testValue: "Negative"
-                  testValueNumeric: 1.8
-                  resultDate: "2024-02-20T10:15:00Z"
-                  unitDescription: "mg/L"
-                  normalRange: "0.5-1.0"
-                  minNorm: 0.5
-                  maxNorm: 1.0
-                  abnormalFlag: "A"
-                  sequenceNum: 2
-                  dateAdded: "2024-02-20T10:45:00Z"
-                  availableAt: "2024-02-20T10:45:00Z"
+          description: Document uploaded successfully
         '400':
-          description: Invalid Parameters
+          description: Invalid JSON or Parameters
           content:
             application/json:
               schema:
@@ -333,17 +310,30 @@ paths:
                 properties:
                   status:
                     type: string
-                    example: "error"
-                  reason:
+                    example: "400"
+                  message:
                     type: string
-                    example: "Invalid hospitalPatientId or date range provided."
+                    example: "Invalid mrn or site provided."
+        '404':
+          description: The patient could not be found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "404"
+                  message:
+                    type: string
+                    example: "The patient could not be found."
 
   /newOpalPatient:
     post:
       tags:
         - historical data
-      summary: Notify institution of a new opal patient and trigger historical data fetch
-      description: "Notify the hospital that a new patient has registered with opal, and trigger a sending of historical data to opal via the existing source data endpoints"
+      summary: Notify institution of a new Opal patient and trigger historical data fetch
+      description: "Notify the hospital that a new patient has registered with Opal, and trigger a sending of all available historical data to Opal via the existing source data endpoints"
       requestBody:
         required: true
         content:
@@ -372,7 +362,20 @@ paths:
                 properties:
                   status:
                     type: string
-                    example: "error"
-                  reason:
+                    example: "400"
+                  message:
                     type: string
                     example: "Invalid mrn or site provided or patient not found."
+        '404':
+          description: The patient cound not be found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "404"
+                  message:
+                    type: string
+                    example: "The patient could not be found."
