chore: switch documentation domain to docs.opalmedapps.ca

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # Project information
 #
 site_name: Opal Documentation
-site_url: https://opalmedapps.gitlab.io/docs
+site_url: https://docs.opalmedapps.ca
 site_author: Opal Health Informatics Group (O-HIG)
 
 # Repository
@@ -107,6 +107,7 @@ plugins:
       skip_downloads: True
       ignore_urls:
         # non-public URLs
+        - https://docs.opalmedapps.ca/*
         - https://opalmedapps.gitlab.io/*
         - https://gitlab.com/opalmedapps/*
         # PlantUML diagrams are included as data
